--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,20 @@ body {
 .text-shadow-cus {
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4);
 }
+
+.footer-h3 {
+  @apply font-bold text-lg text-white mb-4;
+}
+.footer-li {
+  @apply text-base text-gray-500 mb-2;
+}
+
+.menuList {
+  position: absolute;
+  top: 12%;
+  left: 0;
+  right: 0;
+  max-height: 400px;
+  transition: all 0.3s ease-in-out;
+  @apply bg-white visible rounded-lg z-10 mx-8;
+}
